Revert "Fixed firefox bug with weird wrapping of raw button in ratio display" which caused wrapping problems with text
This reverts commit 2c43232af6dd613b471a46afb80da59ddd3bb4af.

--- a/www/css/button.css
+++ b/www/css/button.css
@@ -13,7 +13,7 @@ button, .button {
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-    white-space: normal;
+    white-space: nowrap;
 }
 
 button:hover, .button:hover {
